--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-signup-verification-boilerplate",
+  "name": "angular-boilerplate",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,16 +20,16 @@
     "@angular/platform-browser-dynamic": "^17.3.2",
     "@angular/router": "^17.3.2",
     "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
+    "tslib": "^2.6.2",
     "zone.js": "^0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.5",
-    "@angular/cli": "^17.3.5",
+    "@angular-devkit/build-angular": "^17.3.2",
+    "@angular/cli": "^17.3.2",
     "@angular/compiler-cli": "^17.3.2",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.3",
-    "@types/ws": "^8.5.4",
+    "@types/node": "^12.11.1",
     "codelyzer": "^0.0.28",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^5.0.0",
@@ -38,9 +38,9 @@
     "karma-coverage-istanbul-reporter": "^3.0.2",
     "karma-jasmine": "^3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "^3.3.0",
+    "protractor": "^7.0.0",
     "ts-node": "^8.3.0",
     "tslint": "^6.1.0",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.2"
   }
 }
